--- a/src/style/Isiblog.css
+++ b/src/style/Isiblog.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('src/assets/bglist1.png');
+    background-image: img('src/assets/bglist1.png');
     background-size: cover;
     background-position: center;
 }
