modified:   index.html         modified:   package-lock.json         modified:   package.json         deleted:    public/LogoLPKU.png         modified:   src/App.jsx         deleted:    src/assets/Landing.svg         deleted:    src/assets/LogoLPKU.png         new file:   src/assets/list10.png         new file:   src/assets/list11.png         new file:   src/assets/list12.png         new file:   src/assets/list7.png         new file:   src/assets/list8.png         new file:   src/assets/list9.png         deleted:    src/assets/map.png         new file:   src/components/CategoryButton.jsx         modified:   src/components/FAQ.jsx         modified:   src/components/Footer.jsx         new file:   src/components/MapComponent.jsx         modified:   src/components/Navbar.jsx         deleted:    src/components/Navbar2.jsx         new file:   src/components/Profil.jsx         new file:   src/components/SearchBar.jsx         modified:   src/pages/Aboutus.jsx         new file:   src/pages/Bookfix.jsx         modified:   src/pages/Booktime.jsx         modified:   src/pages/Forumdiskusi.jsx         modified:   src/pages/Home.jsx         modified:   src/pages/Listblog.jsx         modified:   src/pages/Login.jsx         new file:   src/pages/Map.jsx         new file:   src/pages/Profileapp.jsx         new file:   src/pages/Profilpost.jsx         new file:   src/pages/Profilrep.jsx         new file:   src/pages/Signup.jsx         deleted:    src/pages/Singup.jsx         modified:   src/pages/listdokter.jsx         modified:   src/pages/tambahforumdiskusi.jsx         new file:   src/php/koneksi.php         modified:   src/style/About.css         modified:   src/style/Bookcal.css         new file:   src/style/Bookfix.css         modified:   src/style/Booktime.css         modified:   src/style/FAQ.css         modified:   src/style/Footer.css         modified:   src/style/Forumdiskusi.css         modified:   src/style/Home.css         modified:   src/style/Listblog.css         modif

--- a/src/style/About.css
+++ b/src/style/About.css
@@ -1,117 +1,51 @@
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: "roboto", "sans-serif";
-  }
-  a {
-    text-decoration: none;
-  }
-  
-  header ul li a {
-  transition: .3s;
-  }
-  header ul li a:hover {
-  color: #F40F00;
-  }
-  
-  /* Gaya umum untuk header dan main-container */
-  header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
-  
-  }
-  
-  .main-container {
-    width: 100%;
-    padding: 0 2rem;
-  }
-  
-  header {
-  background-image: url('img/navbar_bg.png');
-  background-size: cover;
+#bio {
+  background-image: url('../assets/navbar_bg.png');
+  background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
   background-position: center;
+  display: flex;
+  height: 90vh;
+}
+
+.text h1{
+  margin-top: 200px;
+  text-align: left;
+  font-size: 50px;
   color: white;
-  padding: 200px 0;
-  position: relative;
-          }
+}
+
+.text p{
+  margin-top: -20px;
+  font-size: 30px;
+  color: white;
+}
+
+#home {
+  background-image: url('../assets/navbar_bg.png');
+  background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
+  background-position: center;
+  display: flex;
+  height: 90vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  margin-left: 2rem;
+}
+
+.home-right {
+      display: flex;
+      justify-content: flex-end; /* Mengatur posisi konten ke kanan */
+      } 
+
+.home-left {
+  margin-top: 80px;
+}
   
-  
-  /* Gaya untuk navbar */
-  .nav {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
+.home-right img{
+          width: 400px;
+          margin-top: -360px;
   }
-   
-  
-  /* Gaya untuk logo */
-  .logo{
-    display: flex;
-    align-items: center;
-    font-weight: 700;
-    font-size: 2rem;
-    margin-left: 2rem;
-    margin-top: -350px;
-  }
-  
-  .logo a {
-    color: black;
-  }
-  
-  /* Gaya untuk navigasi */
-  nav ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    gap: 3.5rem;
-  }
-  
-  nav ul li {
-    margin-left: 2rem;
-    margin-top: -280px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #fff; /* Sesuaikan dengan warna teks Anda */
-  }
-  
-  /* Gaya untuk memastikan navigasi berada di tengah kanan */
-  .nav nav {
-    margin-left: auto;
-  }
-  
-  .btn {
-    color: #ffffff;
-      -webkit-text-stroke-width: 1;
-      -webkit-text-stroke-color: #000;
-      border-color: rgba(255, 255, 255, 1);
-      border-style: solid;
-      border-width: 1px;
-      border-radius: 10px;
-      background-color: #331b3b;
-      align-self: stretch;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 0.26px;
-      justify-content: center;
-      padding: 16px 41px;
-      font: 700 13px/137.3% Hind Vadodara, -apple-system, Roboto, Helvetica,
-        sans-serif;
-    }
-    
-    .text h2{
-      margin-left: 50px;
-      margin-top: -50px;
-      font-size: 60px;
-    }
+
+section {
+  padding-left: 3rem;
+  padding-bottom: 5rem;
+}
