--- a/src/style/Bookcal.css
+++ b/src/style/Bookcal.css
@@ -1,29 +1,28 @@
 #Bookcal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin-top: 50px;
-    font-family: Arial, sans-serif;
-    background-image: url('../assets/bgbook.png');
-    background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
-    background-position: center;
+  font-family: Hind-Vadodara, sans-serif;
+  background-image: url('../assets/bgbook.png');
+  background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
+  background-position: center;
   }
+
+  .cal h5 {
+    margin-top: 100px;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
   
   .book-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 30px;
-    margin-top: 70px;
-    background-color: white;
   }
   
   .book-grid {
     display: grid;
     grid-template-columns: .45fr .55fr;
     align-items: start;
-    border: 1px solid #ececec;
+    background-color: white;
+    border: 1px solid #ffffff;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -42,7 +41,7 @@
   .book-right .react-calendar {
     width: 100%;
     max-width: none;
-    border: 1px solid #c9c9c9;
+    border: 1px solid #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
@@ -54,4 +53,19 @@
   .book-left p {
     margin-top: 10px;
   }
-  
+
+  .btncal {
+    margin-top: 30px;
+    margin-left: 360px;
+    padding: 15px 15px; /* Padding di dalam tombol */
+    width: 30%;
+    border: none; /* Menghapus border default tombol */
+    border-radius: 5px; /* Membulatkan sudut */
+    background-color: #331B3B; /* Warna background tombol */
+    color: #fff; /* Warna teks tombol */
+    cursor: pointer; /* Mengubah cursor menjadi pointer */
+    font-size: 10px; /* Ukuran font tombol */
+  }
+  .btncal:hover {
+    background-color: #e0b80e; /* Warna background tombol saat dihover */
+  }
