--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,4 +1,4 @@
-/* footer {
+footer {
     background-color: #E3F2FD;
     padding: 50px 0;
     text-align: center;
@@ -89,4 +89,4 @@ footer .bottom-text {
     margin-top: 20px;
     color: #3E3461;
     font-size: 14px;
-} */
+}
