--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -3,45 +3,38 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 10px;
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  z-index: 100;
+  z-index: 1;
+}
+
+#mobile-menu {
+  z-index: 999;
 }
 
 .menu {
   float: right;
 }
 
-.logo {
-  display: flex;
-  font-weight: 700;
-  font-size: 2rem;
-  margin-left: 1.5rem;
-}
-
 nav ul {
   margin-right: 10px;
   list-style: none;
   display: flex;
-  gap: 3rem;
+  gap: 0.6rem;
 }
 
 nav ul li {
   position: relative;
-  margin-top: -30px;
 }
 
 nav ul li a {
   color: black;
   text-decoration: none;
   text-align: center;
-  transition: .3s;
+  transition: 0.3s;
+  padding: 1rem;
 }
 
 nav ul li a:hover {
-  color: #F40F00;
+  color: #f40f00;
 }
 
 .btnnav {
@@ -49,10 +42,10 @@ nav ul li a:hover {
   width: 20%;
   border: none; /* Menghapus border default tombol */
   border-radius: 5px; /* Membulatkan sudut */
-  background-color: #331B3B; /* Warna background tombol */
+  background-color: #331b3b; /* Warna background tombol */
   color: #fff; /* Warna teks tombol */
   cursor: pointer; /* Mengubah cursor menjadi pointer */
-  font-size: 10px; /* Ukuran font tombol */
+  font-size: 16px; /* Ukuran font tombol */
   justify-self: end;
 }
 .btnnav:hover {
@@ -65,13 +58,8 @@ nav ul li a:hover {
   width: 100%;
   background-color: transparent;
   padding: 20px 0;
-  z-index: 1000;
+  z-index: 999;
   transition: background-color 0.4s ease-in-out;
-}
-
-.navbar.fixed ul li {
-  margin-top: -35px;
-  margin-bottom: 10px;
 }
 
 .navbar.fixed img {
@@ -85,7 +73,7 @@ nav ul li a:hover {
   width: 100%;
   background-color: rgb(255, 255, 255);
   padding: 10px 0;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .dropdown {
@@ -114,7 +102,7 @@ nav ul li:hover .dropdown {
 }
 
 .navbar.fixed .dropdown {
-  top: 45px; 
+  top: 45px;
   padding: 12px 12px;
   color: black;
 }
