--- a/src/style/Isiblog.css
+++ b/src/style/Isiblog.css
@@ -2,13 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: img('src/assets/bglist1.png');
+    background-image: url('../assets/bglist1.png');
     background-size: cover;
     background-position: center;
 }
 .article-page {
     display: flex;
-    max-width: 1200px;
+    max-width: 100%;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -64,7 +64,7 @@ p {
     margin-top: 20px;
 }
 .sidebar-articles h2 {
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 20px;
 }
 .sidebar-article {
