--- a/src/style/Isiblog.css
+++ b/src/style/Isiblog.css
@@ -1,4 +1,12 @@
-body {
+#bio-blog {
+    background-image: url('../assets/bglist.png');
+    background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
+    background-position: center;
+    display: flex;
+    height: 90vh;
+  }
+  
+#Isiblog {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -7,6 +15,7 @@ body {
     background-position: center;
 }
 .article-page {
+    margin-top: auto;
     display: flex;
     max-width: 100%;
     padding: 20px;
