modified:   src/pages/Home.jsx         modified:   src/pages/Isiblog2.jsx         modified:   src/style/Isiblog.css

--- a/src/style/Isiblog.css
+++ b/src/style/Isiblog.css
@@ -15,6 +15,9 @@
     background-position: center;
 }
 .article-page {
+    background-image: url('../assets/bglist1.png');
+    background-size: cover;
+    background-position: center;
     margin-top: auto;
     display: flex;
     max-width: 100%;
