--- a/src/style/Listblog.css
+++ b/src/style/Listblog.css
@@ -1,9 +1,9 @@
 #bio-blog {
     background-image: url('../assets/bglist.png');
     background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
-    background-position: center;
+    background-position: auto;
     display: flex;
-    height: 90vh;
+    height: 60vh;
   }
 /* src/CardSlider.css */
 .card-sliderb {
