--- a/src/style/Profileapp.css
+++ b/src/style/Profileapp.css
@@ -1,9 +1,9 @@
 #profil-app-bio {
     background-image: url('../assets/navbar_bg.png');
     background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
-    background-position: center;
+    background-position: auto;
     display: flex;
-    height: 90vh;
+    height: 60vh;
   }
   
   .profil-app-text h1{
