modified:   src/components/Navbar.jsx         modified:   src/components/Navbarw.jsx         modified:   src/pages/Aboutus.jsx         modified:   src/style/FAQ.css         modified:   src/style/Home.css         modified:   src/style/Navbar.css         modified:   src/style/Navbarw.css

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,5 +1,4 @@
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
@@ -14,6 +13,7 @@ body{
   align-items: center;
   background: url('../assets/background1.png') fixed top center;
   background-size: cover;
+  margin-left: 25px;
 }
 
 .btn1 {
