--- a/src/style/FAQ.css
+++ b/src/style/FAQ.css
@@ -7,12 +7,13 @@
 
 .faq-left {
   width: 100%;
+  margin-left: 25px;
 }
 
 .faq-right {
   width: 33%;
-  margin-top: 100px;
-  margin-bottom: -30px;
+
+
 }
 
 .text-faq {
