--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -12,6 +12,7 @@
 
 .menu {
   float: right;
+  margin-top: -30px;
 }
 
 nav ul {
@@ -19,6 +20,7 @@ nav ul {
   list-style: none;
   display: flex;
   gap: 0.6rem;
+
 }
 
 nav ul li {
@@ -38,7 +40,7 @@ nav ul li a:hover {
 }
 
 .btnnav {
-  padding: 15px 15px; /* Padding di dalam tombol */
+  padding: 10px 15px; /* Padding di dalam tombol */
   width: 20%;
   border: none; /* Menghapus border default tombol */
   border-radius: 5px; /* Membulatkan sudut */
@@ -63,7 +65,8 @@ nav ul li a:hover {
 }
 
 .navbar.fixed img {
-  margin-top: 10px;
+  margin-top: 1px;
+  margin-left: -25px;
 }
 
 .navbar.fixed {
@@ -72,7 +75,8 @@ nav ul li a:hover {
   top: 0;
   width: 100%;
   background-color: rgb(255, 255, 255);
-  padding: 10px 0;
+  padding: 2px 0;
+  height: 80px;
   z-index: 100;
 }
 
@@ -110,3 +114,9 @@ nav ul li:hover .dropdown {
 .dropdown {
   background-color: white; /* Ensure dropdown has a solid background */
 }
+
+.logo {
+  margin-left: 100px;
+  margin-top: -15px;
+}
+
