--- a/src/style/Navbarw.css
+++ b/src/style/Navbarw.css
@@ -16,18 +16,15 @@
 
 .logow {
   display: flex;
-  align-items: center;
-  padding: 5px; /* Adjusted padding */
-  margin-left: 1.5rem;
+
+
 }
 
 .logow-img {
   width: 10px; /* Adjust the width to make the image smaller */
-  max-width: 10px;
   height: auto; /* Maintain aspect ratio */
-  margin-right: 10px; /* Add some spacing if necessary */
+  margin-left: px;
 }
-
 
 .menuw nav ul {
   margin-right: 10px;
@@ -49,7 +46,7 @@
 }
 
 .menuw nav ul li a:hover {
-  color: #F40F00;
+  color: #215277;
 }
 
 .btnnavw {
@@ -90,6 +87,7 @@
   align-items: center;
   position: fixed;
   top: 0;
+  height: 100px;
   width: 100%;
   background-color: rgb(0, 0, 0);
   padding: 10px 0;
@@ -129,4 +127,8 @@ nav ul li:hover .dropdownw {
 
 .dropdownw {
   background-color: white; /* Ensure dropdown has a solid background */
+}
+
+.logo {
+  margin-left: 10px;
 }
