--- a/src/style/Forumdiskusi.css
+++ b/src/style/Forumdiskusi.css
@@ -1,9 +1,9 @@
 #forum-diskusi {
   background-image: url('../assets/navbar_bg.png');
   background-size: cover; /* Mengatur gambar agar mencakup seluruh area kontainer */
-  background-position: center;
+  background-position: auto;
   display: flex;
-  height: 90vh;
+  height: 60vh;
 }
 
 #forum-diskusi {
